update design and content of home-who we are

--- a/about.html
+++ b/about.html
@@ -407,7 +407,7 @@
 
 
 <div class="container py-5" onload="boom();">
-	<div class="row">
+	<div class="row align-items-center justify-content-between">
 		<div class="col-12 col-md-7 col-lg-8 pb-4 pb-md-0">
 			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
 				<p class="boom-opacity">Prerana Enterprises is all about <i>corrugation</i>. And for us, it's never <i>just a box</i>. Each box we manufacture is of outstanding quality and eco-friendly!</p><p class="mb-2 boom-opacity">If you are looking for custom-printed corrugated packing material, this is the precise place. We manufacture content-protecting, brand-enhancing, sustainable packaging boxes that will help your products to stand-out and get noticed thus increasing your sale. Our boxes offer sustainability and reliability helping you sell more and worry less.</p>
