--- a/index.html
+++ b/index.html
@@ -663,25 +663,29 @@
 
 
 <div class="container py-4">
-	<h2 class="text-center subname pb-4 proud-client boom-opacity">More About Us</h2>
-	<div class="row">
-		<div class="col-12 col-md-7 col-lg-8 pb-4 pb-md-0">
+	
+	<div class="row align-items-center justify-content-between">
+		<div class="col-12 col-md-6 pb-4 pb-md-0">
+			<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Who We Are</h2>
 			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
-				<p class="boom-opacity">Prerana Enterprises is all about <i>corrugation</i>. And for us, it's never <i>just a box</i>. Each box we manufacture is of outstanding quality and eco-friendly!</p><p class="mb-2 boom-opacity">If you are looking for custom-printed corrugated packing material, this is the precise place. We manufacture content-protecting, brand-enhancing, sustainable packaging boxes that will help your products to stand-out and get noticed thus increasing your sale. Our boxes offer sustainability and reliability helping you sell more and worry less.</p>
-				<p class="mb-2 boom-opacity">Since its founding at Goregaon (Mumbai) in 1985 and later moving to Dapoli in 1998 for expansion purpose, Prerana Enterprises has developed exponentially to become a leading supplier of Corrugated Boxes (Paper Board Cartons), in Ratnagiri, Raigad, Panvel and Navi Mumbai.</p>
+				<p class="boom-opacity home-about-para">At Prerana Enterprises, quality and customer satisfaction are our primary focus. We manufacture eco-friendly products which are both, cost-effective and customisable.</p>
+				<p class="home-about-para d-block d-lg-block d-md-none">We manufacture corrugated boxes according to your requirement and specification and make sure you get the best out of it. We are the leading corrugated boxes manufacturer in Ratnagiri, Raigad, Panvel and Navi Mumbai.</p>
 			</div>
-			
-			<div class="row">
-				<div class="col-7">
-					<div class="exp-before py-md-4 py-3 text-dark"><div class="w-auto float-left exp-digit">25</div><div class="w-auto exp-text">Years<br>Experience</div></div>
-				</div>
-				<div class="col-5">
-					<div class="py-4 text-right"><a href="about" class="btn btn-dark">More About Us!</a></div>
+			<div class="justify-content-center">
+				<div class="exp-show">
+					<div class="exp-number-area">
+						<div class="exp-number"><h2>25</h2></div>
+						
+					</div>
+					<div class="exp-unit-area">
+						<h4 class="mb-0">Years<span class="exp-unit-2">Of Experience</span><span class="proud-client">And Counting...</span></h4>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-12 col-md-5 col-lg-4 boom-opacity">
-			<div class="about-pic-div"><img src="images/sky_spare.jpg" class="img-fluid"></div>
+
+		<div class="col-12 col-md-6 boom-opacity">
+			<div><img src="images/sky_spare.jpg" class="img-fluid"></div>
 		</div>
 	</div>
 </div>
