--- a/index.html
+++ b/index.html
@@ -664,14 +664,14 @@
 
 <div class="container py-4">
 	
-	<div class="row align-items-center justify-content-between">
+	<div class="row align-items-center justify-content-between boom-opacity boom-mt">
 		<div class="col-12 col-md-6 pb-4 pb-md-0">
 			<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Who We Are</h2>
 			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
 				<p class="boom-opacity home-about-para">At Prerana Enterprises, quality and customer satisfaction are our primary focus. We manufacture eco-friendly products which are both, cost-effective and customisable.</p>
 				<p class="home-about-para d-block d-lg-block d-md-none">We manufacture corrugated boxes according to your requirement and specification and make sure you get the best out of it. We are the leading corrugated boxes manufacturer in Ratnagiri, Raigad, Panvel and Navi Mumbai.</p>
 			</div>
-			<div class="justify-content-center">
+			<div class="justify-content-center boom-opacity">
 				<div class="exp-show">
 					<div class="exp-number-area">
 						<div class="exp-number"><h2>25</h2></div>
