--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 						
 					</div>
 					<div class="exp-unit-area">
-						<h4 class="mb-0">Years<span class="exp-unit-2">Of Experience</span><span class="proud-client">And Counting...</span></h4>
+						<h4 class="mb-0">Years<span class="exp-unit-2 pt-1">Of Experience</span></h4>
 					</div>
 				</div>
 			</div>
