--- a/about.html
+++ b/about.html
@@ -432,7 +432,7 @@
 				<p class="text-white mb-md-0 mb-5 scroll-info"><b>Experience</b></p>
 			</div>
 			<div class="col-md-3 col-6 text-center">
-				<p class="text-white mb-md-3 mb-2 scroll-values"><b><span class="scroll" value="1500">0</span> kg</b></p>
+				<p class="text-white mb-md-3 mb-2 scroll-values"><b><span class="scroll" value="1500">0</span> kg/day</b></p>
 				<p class="text-white mb-0 scroll-info"><b>Working Capacity</b></p>
 			</div>
 			<div class="col-md-3 col-6 text-center">
@@ -448,14 +448,14 @@
 <div class="about-awards">
 	<div class="quote py-4">
 		<div class="container">
-			<h2 class="text-center subname pb-4 proud-client boom-opacity">Awards Won</h2>
+			<h2 class="text-center subname pb-4 mb-1 proud-client boom-opacity">Awards Won</h2>
 		</div>
 		<div class="container">
-			<blockquote class="blockquote text-center">
+			<blockquote class="blockquote pb-3 text-center">
 				<p class="mb-0 boom-mt boom-opacity">“M/s Prerana Enterprises receives an Industrial Excellence Award for Rural Development”</p>
 				<footer class="blockquote-footer">Delhi, <cite title="Source Title">2004</cite></footer>
 			</blockquote>
-			<blockquote class="blockquote pb-5 text-center">
+			<blockquote class="blockquote pb-3 text-center">
 				<p class="mb-0 boom-mt boom-opacity">“M/s Prerana Enterprises receives a Best Small Scale Industry Award from District Industry Centre for 2004”</p>
 				<footer class="blockquote-footer">Ratnagiri, <cite title="Source Title">2004</cite></footer>
 			</blockquote>
