--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Prerana Enterprises | About Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
+	<meta http-equiv="content-language" content="en-in"/>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
@@ -346,8 +347,8 @@
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="https://preranaenterprises.in"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
-			<a href="https://preranaenterprises.in"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
+			<a href="https://preranaenterprises.in"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises Logo"></a>
+			<a href="https://preranaenterprises.in"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises Logo"></a>
 			<ul>
 				<li><a class="navbar-item" href="https://preranaenterprises.in"><i class="fas fa-home"></i> Home</a></li>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
@@ -357,7 +358,7 @@
 		</nav>
 
 		<div class="container">
-			<h2 class=" subname pt-2 pb-2 text-white">About Us</h2>
+			<h1 class=" subname pt-2 pb-2 text-white">About Us</h1>
 		</div>
 
 	</div>
@@ -415,7 +416,7 @@
 			</div>
 		</div>
 		<div class="col-12 col-md-5 col-lg-4 boom-opacity">
-			<div class="about-pic-div"><img src="images/sky_spare.jpg" class="about-pic"></div>
+			<div class="about-pic-div"><img src="images/sky_spare.jpg" alt="Anand Karmarkar" class="about-pic"></div>
 		</div>
 	</div>
 </div>
