--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Prerana Enterprises</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
+	<meta http-equiv="content-language" content="en-in"/>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
@@ -473,8 +474,8 @@
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="#"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
-			<a href="#"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
+			<a href="#"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises Logo"></a>
+			<a href="#"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises Logo"></a>
 			<ul>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
 				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
@@ -685,7 +686,7 @@
 		</div>
 
 		<div class="col-12 col-md-6 boom-opacity">
-			<div><img src="images/sky_spare.jpg" class="img-fluid"></div>
+			<div><img src="images/sky_spare.jpg" alt="About Prerana Enterprises" class="img-fluid"></div>
 		</div>
 	</div>
 </div>
