--- a/services.html
+++ b/services.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Prerana Enterprises | Our Services</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
+	<meta http-equiv="content-language" content="en-in"/>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
@@ -365,8 +366,8 @@
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="https://preranaenterprises.in"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises"></a>
-			<a href="https://preranaenterprises.in"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises"></a>
+			<a href="https://preranaenterprises.in"><img src="images/2.png" id="logo-light" alt="Prerana Enterprises Logo"></a>
+			<a href="https://preranaenterprises.in"><img src="images/3.png" id="logo-dark" alt="Prerana Enterprises Logo"></a>
 			<ul>
 				<li><a class="navbar-item" href="https://preranaenterprises.in"><i class="fas fa-home"></i> Home</a></li>
 				<li><a class="navbar-item" href="about"><i class="fas fa-file-contract"></i> About Us</a></li>
@@ -376,7 +377,7 @@
 		</nav>
 
 		<div class="container">
-			<h2 class=" subname pt-2 pb-2 text-white">Our Services</h2>
+			<h1 class=" subname pt-2 pb-2 text-white">Our Services</h1>
 		</div>
 
 	</div>
