--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
 	<meta http-equiv="content-language" content="en-in"/>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Contact us to get best quality corrugated boxes as per your specifications and needs.">
+	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
 
 	<!--whatsapp and fb-->
 	<meta property="og:title" content="Prerana Enterprises | Contact Us" />
-	<meta property="og:description" content="" />
-	<meta property="og:url" content="" />
+	<meta property="og:description" content="Contact us to get best quality corrugated boxes as per your specifications and needs." />
+	<meta property="og:url" content="https://preranaenterprises.in/contact" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="" />
 	<meta property="og:image:type" content="image/png" />
@@ -25,7 +25,7 @@
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
 	<meta property="twitter:title" content="Prerana Enterprises | Contact Us" />
-	<meta property="twitter:description" content="" />
+	<meta property="twitter:description" content="Contact us to get best quality corrugated boxes as per your specifications and needs." />
 	<meta property="twitter:image" content="" />
 
 	<!-- Chrome, Firefox OS and Opera -->
