--- a/about.html
+++ b/about.html
@@ -358,7 +358,7 @@
 		</nav>
 
 		<div class="container">
-			<h1 class=" subname pt-2 pb-2 text-white">About Us</h1>
+			<h1 class="subname pt-2 pb-2 text-white">About Us</h1>
 		</div>
 
 	</div>
@@ -372,11 +372,11 @@
 
 <div class="position-fixed contact-pop" id="contact-pop">
 	
-	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop text-danger" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile text-danger"><i class="far fa-grin-alt"></i></h2></div>
+	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop color-orange" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile color-orange"><i class="far fa-grin-alt"></i></h2></div>
 
 	<div class="row">
 		<h2 class=" subname pt-2 pb-2 proud-client col-10" id="pop-subname">Contact Us</h2>
-		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop text-danger" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
+		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop color-orange" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
 	</div>
 	
 	<form class="ev_form mt-0 mb-3" autocomplete="off" id="pop-form" action="javascript: void(0)" onsubmit="return formSubmit();">
@@ -397,7 +397,7 @@
             <br>
 
 
-            <button class="btn btn-danger py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
+            <button class="btn py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
 
 
         </div>
@@ -410,7 +410,7 @@
 <div class="container py-5" onload="boom();">
 	<div class="row align-items-center justify-content-between">
 		<div class="col-12 col-md-7 col-lg-8 pb-4 pb-md-0">
-			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
+			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity about-info">
 				<p class="boom-opacity">Prerana Enterprises is all about <i>corrugation</i>. And for us, it's never <i>just a box</i>. Each box we manufacture is of outstanding quality and eco-friendly!</p><p class="mb-2 boom-opacity">If you are looking for custom-printed corrugated packing material, this is the precise place. We manufacture content-protecting, brand-enhancing, sustainable packaging boxes that will help your products to stand-out and get noticed thus increasing your sale. Our boxes offer sustainability and reliability helping you sell more and worry less.</p>
 				<p class="mb-2 boom-opacity">Since its founding at Goregaon (Mumbai) in 1985 and later moving to Dapoli in 1998 for expansion purpose, Prerana Enterprises has developed exponentially to become a leading supplier of Corrugated Boxes (Paper Board Cartons), in Ratnagiri, Raigad, Panvel and Navi Mumbai.</p>
 			</div>
@@ -449,7 +449,7 @@
 <div class="about-awards">
 	<div class="quote py-4">
 		<div class="container">
-			<h2 class="text-center subname pb-4 mb-1 proud-client boom-opacity">Awards Won</h2>
+			<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Awards Won</h2>
 		</div>
 		<div class="container">
 			<blockquote class="blockquote pb-3 text-center">
@@ -678,6 +678,7 @@
 			}
 			boom();
 			page_height();
+			dyheight();
 		}, 2200);
 	};
 
