--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 			document.getElementById('footer-image-div').style.height = document.getElementById('footer-image').clientHeight+'px';
 			document.getElementById('footer-image-div').style.marginTop = ((document.getElementById('footer-3').offsetHeight - document.getElementById('footer-image').clientHeight)/2)+'px';
 
+
 			if(window.innerHeight<830 && window.innerWidth>=900)
 			{
 				document.getElementById('banner').style.minHeight = window.innerHeight+'px';
@@ -492,7 +493,7 @@
 			</div>
 			
 
-			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="services" class="mr-lg-5 btn btn-danger banner-btn">View Services</a></div></div>
+			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="services" class="mr-lg-5 btn banner-btn">Contact Us</a></div></div>
 
 		</div>
 
@@ -508,11 +509,11 @@
 
 <div class="position-fixed contact-pop" id="contact-pop">
 	
-	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop text-danger" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile text-danger"><i class="far fa-grin-alt"></i></h2></div>
+	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop color-orange" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile color-orange"><i class="far fa-grin-alt"></i></h2></div>
 
 	<div class="row">
 		<h2 class=" subname pt-2 pb-2 proud-client col-10" id="pop-subname">Contact Us</h2>
-		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop text-danger" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
+		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop color-orange" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
 	</div>
 	
 	<form class="ev_form mt-0 mb-3" autocomplete="off" id="pop-form" action="javascript: void(0)" onsubmit="return formSubmit();">
@@ -533,7 +534,7 @@
             <br>
 
 
-            <button class="btn btn-danger py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
+            <button class="btn py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
 
 
         </div>
@@ -544,7 +545,7 @@
 
 
 <div class="container py-4">
-	<h2 class="text-center subname pb-4 proud-client boom-opacity">Our Services</h2>
+	<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Our Services</h2>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-12 boom-mt boom-opacity">
 			
@@ -605,7 +606,7 @@
 		</div>
 		
 	</div>
-	<div class="pb-sm-4"><div class="text-right"><a href="services" class="mr-lg-5 btn btn-primary banner-btn">More Services</a></div></div>
+	<div class="pb-sm-4"><div class="text-right"><a href="services" class="mr-lg-5 btn ser-btn banner-btn">More Services</a></div></div>
 </div>
 
 <script type="text/javascript">
@@ -782,7 +783,7 @@
 
 <div class="proudy">
 	<div class="proudy">
-		<h2 class="text-center subname pt-4 pb-4 proud-client boom-opacity">Our Proud Clients</h2>
+		<h2 class="text-center pb-4 pt-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Our Proud Clients</h2>
 
 		<div class="pb-4 pt-2">
 
@@ -814,7 +815,7 @@
 	</div>
 
 
-	<h2 class="text-center container subname proud-client boom-opacity">Client Testimonials<br><i class="fas fa-quote-left testimonial-quotes"></i></h2>
+	<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Client Testimonials<br><i class="fas fa-quote-left testimonial-quotes"></i></h2>
 
 	<div class="container pb-4">
 	    <div id="testimonials" class="carousel slide" data-ride="carousel" data-interval="4000">
@@ -1120,6 +1121,7 @@
 			}
 			boom();
 			page_height();
+			dyheight();
 		}, 2200);
 	};
 
