--- a/services.html
+++ b/services.html
@@ -391,11 +391,11 @@
 
 <div class="position-fixed contact-pop" id="contact-pop">
 	
-	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop text-danger" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile text-danger"><i class="far fa-grin-alt"></i></h2></div>
+	<div class="position-fixed bg-white" id="thank-pop"><h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop color-orange" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile color-orange"><i class="far fa-grin-alt"></i></h2></div>
 
 	<div class="row">
 		<h2 class=" subname pt-2 pb-2 proud-client col-10" id="pop-subname">Contact Us</h2>
-		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop text-danger" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
+		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop color-orange" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
 	</div>
 	
 	<form class="ev_form mt-0 mb-3" autocomplete="off" id="pop-form" action="javascript: void(0)" onsubmit="return formSubmit();">
@@ -416,7 +416,7 @@
             <br>
 
 
-            <button class="btn btn-danger py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
+            <button class="btn py-1" id="pop-submit" type="submit" name="sub_form">Submit</button>
 
 
         </div>
@@ -852,6 +852,7 @@
 			}
 			boom();
 			page_height();
+			dyheight();
 		}, 2200);
 	};
 
