--- a/contact.html
+++ b/contact.html
@@ -304,7 +304,7 @@
 
 
 
-<h2 class="text-center pb-4 pb-md-3 home-about-title font-weight-bold"><i class="fas fa-map-marker-alt icon-color"></i> Find Us Here</h2>
+<h2 class="text-center pt-4 pb-4 pb-md-3 home-about-title font-weight-bold"><i class="fas fa-map-marker-alt icon-color"></i> Find Us Here</h2>
 
 
 <div class="container pb-4"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122139.63575622237!2d73.17021154688368!3d17.76026599562189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be9c229663fea65%3A0x2cba3d6781d9923d!2sPrerana%20Enterprises!5e0!3m2!1sen!2sin!4v1594105915819!5m2!1sen!2sin" height="500" frameborder="0" style="border:5px solid #bbb; border-radius: 10px; width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
