--- a/about.html
+++ b/about.html
@@ -525,7 +525,7 @@
 						<div class="col-sm-10 col-9 mb-2">email.email.com</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-store-alt"></i></i></div>
+						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-store-alt"></i></div>
 						<div class="col-sm-10 col-9 mb-2 footer-address">Address..., Address..., Address...,<br>Address..., Address..., Address...</div>
 					</div>
 					<div class="text-center text-md-left pb-2 pl-md-5">
