--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@
 				<div class="img-strip" id="img-strip">
 					<div class="image-move"><img src="images/l1.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/l2.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-					<div class="image-move"><img src="images/4882.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-					<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+					<div class="image-move"><img src="images/l3.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+					<div class="image-move"><img src="images/l4.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/longlogo.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/recycle.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/triangles_bg.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
