--- a/index.html
+++ b/index.html
@@ -794,9 +794,8 @@
 					<div class="image-move"><img src="images/l2.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/l3.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 					<div class="image-move"><img src="images/l4.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-					<div class="image-move"><img src="images/longlogo.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-					<div class="image-move"><img src="images/recycle.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
-					<div class="image-move"><img src="images/triangles_bg.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+					<div class="image-move"><img src="images/l5.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+					<div class="image-move"><img src="images/l6.jpg" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 				</div>
 			</div>
 
@@ -825,12 +824,12 @@
 			</ol>
 	        <div class="carousel-inner" role="listbox">
 	            <div class="carousel-item active text-center p-4">
-	            	<h5 class="testimonial-name">Name</h5>
-	                <p class="testimonial-height" id="longest">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque exercitationem vel tenetur, voluptas, neque enim, suscipit nisi eos deleniti eius quibusdam nesciunt deserunt officia natus corrupti, eum voluptate inventore iure!</p>
+	            	<h5 class="testimonial-name">Varun Mahaajan</h5>
+	                <p class="testimonial-height" id="longest">Rating: Very Good!<br>Excellent and timely service. Good management.</p>
 	            </div>
 	            <div class="carousel-item text-center p-4">
-	            	<h5 class="testimonial-name">Name</h5>
-	                <p class="testimonial-height">2Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque exercitationem vel tenetur, voluptas, neque enim, suscipit nisi eos deleniti eius quibusdam nesciunt deserunt</p>
+	            	<h5 class="testimonial-name">Impressive</h5>
+	                <p class="testimonial-height">Rating: Impressive!<br>Lots of varieties and cost effective.</p>
 	            </div>
 	        </div>
 	        <a class="carousel-control-prev" href="#testimonials" role="button" data-slide="prev">
