--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 	                <p class="testimonial-height" id="longest">Rating: Very Good!<br>Excellent and timely service. Good management.</p>
 	            </div>
 	            <div class="carousel-item text-center p-4">
-	            	<h5 class="testimonial-name">Impressive</h5>
+	            	<h5 class="testimonial-name">Manoj Gujar</h5>
 	                <p class="testimonial-height">Rating: Impressive!<br>Lots of varieties and cost effective.</p>
 	            </div>
 	        </div>
