--- a/index.html
+++ b/index.html
@@ -824,12 +824,12 @@
 			</ol>
 	        <div class="carousel-inner" role="listbox">
 	            <div class="carousel-item active text-center p-4">
-	            	<h5 class="testimonial-name">Varun Mahaajan</h5>
-	                <p class="testimonial-height" id="longest">Rating: Very Good!<br>Excellent and timely service. Good management.</p>
+	            	<h5 class="testimonial-height" id="longest">Excellent and Timely Service with Good Management.<br>Very Good!</h5>
+	                <p class="testimonial-name">- Varun Mahaajan<br></p>
 	            </div>
 	            <div class="carousel-item text-center p-4">
-	            	<h5 class="testimonial-name">Manoj Gujar</h5>
-	                <p class="testimonial-height">Rating: Impressive!<br>Lots of varieties and cost effective.</p>
+	            	<h5 class="testimonial-height">Lots of Varieties and Cost Effective.<br>Impressive!</h5>
+	                <p class="testimonial-name">- Manoj Gujar <b><i>(Mangoes Trader)</i></b><br></p>
 	            </div>
 	        </div>
 	        <a class="carousel-control-prev" href="#testimonials" role="button" data-slide="prev">
