--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
 					</div>
 					<div class="row footer-data px-3">
 						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
-						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Food industry</div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Fruits & Vegetables</div>
 					</div>
 					<div class="row footer-data px-3">
 						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
