--- a/index.html
+++ b/index.html
@@ -825,11 +825,11 @@
 	        <div class="carousel-inner" role="listbox">
 	            <div class="carousel-item active text-center p-4">
 	            	<h5 class="testimonial-height" id="longest">Excellent and Timely Service with Good Management.<br>Very Good!</h5>
-	                <p class="testimonial-name">- Varun Mahaajan<br></p>
+	                <p class="testimonial-name">- Varun Mahaajan <b class="cite"><i>(Mahaajan Beverage)</i></b><br></p>
 	            </div>
 	            <div class="carousel-item text-center p-4">
 	            	<h5 class="testimonial-height">Lots of Varieties and Cost Effective.<br>Impressive!</h5>
-	                <p class="testimonial-name">- Manoj Gujar <b><i>(Mangoes Trader)</i></b><br></p>
+	                <p class="testimonial-name">- Manoj Gujar <b class="cite"><i>(Mangoes Trader)</i></b><br></p>
 	            </div>
 	        </div>
 	        <a class="carousel-control-prev" href="#testimonials" role="button" data-slide="prev">
@@ -919,7 +919,7 @@
 					</div>
 					<div class="row footer-data px-3">
 						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
-						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Food industry</div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Fruits & Vegetables</div>
 					</div>
 					<div class="row footer-data px-3">
 						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
