--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="content-language" content="en-in"/>
 	<meta name="description" content="Leading corrugated box manufacturer in Navi Mumbai, Panvel, Raigad and Ratnagiri.">
-	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar">
+	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar, home, quality">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
 
@@ -19,17 +19,17 @@
 	<meta property="og:description" content="Get best quality corrugated boxes as per your specifications and needs." />
 	<meta property="og:url" content="https://preranaenterprises.in/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="" />
+	<meta property="og:image" content="https://preranaenterprises.in/images/icon.png" />
 	<meta property="og:image:type" content="image/png" />
-	<meta property="og:image:width" content="" />
-	<meta property="og:image:height" content="" />
+	<meta property="og:image:width" content="642" />
+	<meta property="og:image:height" content="642" />
 	<meta property="og:image:alt" content="Prerana Enterprises" />
 
 	<!--twitter-->
-	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Prerana Enterprises" />
-	<meta property="twitter:description" content="Get best quality corrugated boxes as per your specifications and needs." />
-	<meta property="twitter:image" content="" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Prerana Enterprises" />
+	<meta name="twitter:description" content="Get best quality corrugated boxes as per your specifications and needs." />
+	<meta name="twitter:image" content="https://preranaenterprises.in/images/icon.png" />
 
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#33485a">
