--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
 	<meta http-equiv="content-language" content="en-in"/>
-	<meta name="description" content="Contact us to get best quality corrugated boxes as per your specifications and needs.">
+	<meta name="description" content="Contact us to get best quality corrugated boxes as per your specifications and needs. We provide services in various different fields.">
 	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar, contact us, us, contact, call, whatsapp, address, location, phone, number, phone number, whatsapp number, quality">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
