--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
 	<meta http-equiv="content-language" content="en-in"/>
-	<meta name="description" content="Know our services in diverse fields and get best quality corrugated boxes as per your specifications and needs.">
+	<meta name="description" content="Know our services in diverse fields and get best quality corrugated boxes as per your specifications and needs. Get corrugated boxes of your required sizes and specifications. We provide services in various different fields.">
 	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar, services, oil, fish, quality, all boxes, type, types, variety">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
