--- a/about.html
+++ b/about.html
@@ -682,6 +682,20 @@
 		}, 2200);
 	};
 
+	document.onload = function() {
+		document.getElementById('check').checked=false;
+		page_height();
+		setTimeout(function() {
+			if(document.getElementById('check').checked && no_of_click==0)
+			{
+				document.getElementById('check').checked=false;
+			}
+			boom();
+			page_height();
+			dyheight();
+		}, 2200);
+	};
+
 		
 	
 </script>
