--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
 	<meta name="keywords" content=" box, packaging, package, corrugated, boxes, corrugated boxes, cardboard, cardboard boxes, packaging boxes, mumbai, navi mumbai, dapoli, ratnagiri, panvel, raigad, wholesale, retail, fisheries, vegetables, fruits, food, export, agro-chemical, agriculture, chemical, oil, edible oil, consumer goods, corrugated sheets, customise, customize, customisable, customizable, cartons, carton, prerana enterprises, anand karmarkar, karmarkar, shubham karmarkar, about us, about, info, information, quality">
 	<meta name="author" content="Abhishek Joshi +919757468857 (available on WhatsApp) abhijoshi2k@gmail.com">
 
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+
 
 	<!--whatsapp and fb-->
 	<meta property="og:title" content="About Us | Prerana Enterprises" />
@@ -446,12 +449,12 @@
 
 
 
-<div class="about-awards">
+<div>
 	<div class="quote py-4">
 		<div class="container">
 			<h2 class="text-center pb-4 pb-md-3 home-about-title boom-opacity font-weight-bold">Awards Won</h2>
 		</div>
-		<div class="container">
+		<div class="container about-awards">
 			<blockquote class="blockquote pb-3 text-center">
 				<p class="mb-0 boom-mt boom-opacity">“M/s Prerana Enterprises receives an Industrial Excellence Award for Rural Development”</p>
 				<footer class="blockquote-footer">Delhi, <cite title="Source Title">2004</cite></footer>
