--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
 	</div>
 
 
-	<div class="container text-right"><p class="text-justify home-happy boom-opacity pb-4 mb-0">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p></div>
+	<div class="container text-right"><p class="text-center home-happy boom-opacity pb-4 mb-0"><i><b>We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</b></i></p></div>
 </div>
 
 
