--- a/index.html
+++ b/index.html
@@ -1012,8 +1012,8 @@
 		}
 		else
 		{
-			document.getElementsByClassName('banner')[0].style.transitionTimingFunction = 'linear';
-			document.getElementsByClassName('banner')[0].style.minHeight = '0px';
+			// document.getElementsByClassName('banner')[0].style.transitionTimingFunction = 'linear';
+			// document.getElementsByClassName('banner')[0].style.minHeight = '0px';
 		}
 		document.getElementById('nav').style.height = '70px';
 		$("nav a img").css("top","10px");
