image size reduced badly

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
 		</div>
 
 		<div class="col-12 col-md-6 boom-opacity">
-			<div><img src="images/sky_spare.jpg" alt="About Prerana Enterprises" class="img-fluid"></div>
+			<div><img src="images/144.jpg" alt="About Prerana Enterprises" class="img-fluid home-about-img"></div>
 		</div>
 	</div>
 </div>
@@ -811,8 +811,12 @@
 			    <li data-target="#testimonials" data-slide-to="1"></li>
 			</ol>
 	        <div class="carousel-inner" role="listbox">
+	        	<div class="carousel-item active text-center p-4">
+	            	<h5 class="testimonial-height" id="longest">In time delivery and in good condition too!<wbr> We appreciate the quality and service provided by Prerana Enterprises who provided the same quality material in time for more than 10 years</h5>
+	                <p class="testimonial-name">- <b class="cite"><i>Delight Bulb Industry</i></b><br></p>
+	            </div>
 	            <div class="carousel-item active text-center p-4">
-	            	<h5 class="testimonial-height" id="longest">Excellent and Timely Service with Good Management.<br>Very Good!</h5>
+	            	<h5 class="testimonial-height">Excellent and Timely Service with Good Management.<br>Very Good!</h5>
 	                <p class="testimonial-name">- <b>Varun Mahaajan</b> <b class="cite"><i>(Mahaajan Beverage)</i></b><br></p>
 	            </div>
 	            <div class="carousel-item text-center p-4">
