--- a/services.html
+++ b/services.html
@@ -301,7 +301,7 @@
 			document.getElementById('message').setAttribute('readonly', '');
 			document.getElementById('pop-submit').setAttribute('disabled', '');
 			var name = document.getElementById('name').value;
-			var phone = document.getElementById('country').value + '-' + document.getElementById('phone').value;
+			var phone = document.getElementById('country').value + ' ' + document.getElementById('phone').value;
 			var email = document.getElementById('email').value;
 			var message = document.getElementById('message').value;
 			if(email=="")
