--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@
                     <label for="country">Mobile Number<span class="form-required"> *</span></label>
                     <div class="form-row">
 		            	<div class="form-group col-2 mb-0">
-		            		<input type="tel" pattern="[+][0-9]{1,2}" id="country" class="mb-0 mt-lg-1 form-control pop-contact-input" placeholder="+91" autocomplete="off" value="+91" required>
+		            		<input type="tel" title="Please enter country code Ex. +91" pattern="[+][0-9]{1,2}" id="country" class="mb-0 mt-lg-1 form-control pop-contact-input" placeholder="+91" autocomplete="off" value="+91" required>
 		            	</div>
 		            	<div class="form-group col-10 mb-0">
 		            		<input type="tel" id="phone" class="mb-0 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
