--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 			</div>
 			
 
-			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="services" class="mr-lg-5 btn banner-btn">Contact Us</a></div></div>
+			<div class="pt-2 pb-sm-4 pb-3"><div class="mr-lg-5 pr-lg-5"><a href="contact" class="mr-lg-5 btn banner-btn">Contact Us</a></div></div>
 
 		</div>
 
