--- a/index.html
+++ b/index.html
@@ -815,6 +815,7 @@
 	    	<ol class="carousel-indicators mb-0">
 			    <li data-target="#testimonials" data-slide-to="0" class="active"></li>
 			    <li data-target="#testimonials" data-slide-to="1"></li>
+			    <li data-target="#testimonials" data-slide-to="2"></li>
 			</ol>
 	        <div class="carousel-inner" role="listbox">
 	        	<div class="carousel-item active text-center p-4">
