--- a/about.html
+++ b/about.html
@@ -392,9 +392,9 @@
             <label for="country">Mobile Number<span class="form-required"> *</span></label>
             <div class="form-row">
             	<div class="form-group col-2 mb-0">
-            		<input type="tel" title="Please enter country code Ex. +91" pattern="[+][0-9]{1,2}" id="country" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="+91" autocomplete="off" value="+91" required>
+            		<input type="tel" title="Please enter country code Ex. +91" pattern="[+][0-9]{1,2}" id="country" class="mb-2 mt-lg-1 form-control pop-contact-input px-sm-2 px-1" placeholder="+91" autocomplete="off" value="+91" required>
             	</div>
-            	<div class="form-group col-10 mb-0">
+            	<div class="form-group col-10 mb-0 pl-sm-1 pl-0">
             		<input type="tel" id="phone" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
             	</div>
             </div>
