--- a/about.html
+++ b/about.html
@@ -541,7 +541,8 @@
 					<div class="text-center text-md-left pb-2 pl-md-5">
 						<a href="#" class="btn btn-success py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fab fa-whatsapp"></i></a>
 						<a href="#" class="btn btn-light py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-map-marker-alt"></i></a>
-						<a href="#" class="btn btn-primary py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social"><i class="fas fa-phone-alt"></i></a>
+						<a href="#" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-linkedin text-white"><i class="fab fa-linkedin-in"></i></a>
+						<a href="#" class="btn py-0 px-1 ml-sm-2 mx-2 mt-1 footer-social footer-social-facebook text-white"><i class="fab fa-facebook"></i></a>
 					</div>
 				</div>
 
